# ds

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md  a.sh  rustfmt.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: ✨-feature-request.md  🐛-bug-report.md
.github/workflows/: rust.yml
docs/: CHANGELOG.md  README.md  notes.md
docs/assets/: terminalizer.yml
src/: cli.rs  data.rs  display.rs  error.rs  escape.rs  lib.rs  main.rs  utils.rs
tests/: command.rs  commands.rs  fillers.rs  integration_tests.rs  misc.rs
