[package]
authors = ["Rafael R. Camargo <rafaelrakochinski@gmail.com>"]
categories = ["command-line-utilities"]
description = "Visualize container stats with beautiful, real-time charts directly in your terminal."
edition = "2021"
keywords = ["docker", "container", "stats", "monitoring", "terminal", "charts"]
license = "Apache-2.0"
name = "ds"
repository = "https://github.com/rafaelrcamargo/ds"
version = "0.0.0"

[badges]
maintenance = { status = "experimental" }

[[bin]]
name = "ds"

[dependencies]
byte-unit = "4.0.19"
clap = "4.4.4"
colored = "2.0.4"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
terminal_size = "0.3.0"
