[package]
authors = ["Rafael R. Camargo"]
categories = ["command-line-utilities"]
description = "Visualize container stats with beautiful, real-time charts directly in your terminal."
edition = "2021"
keywords = ["docker", "container", "stats", "monitoring", "terminal", "charts"]
license = "Apache-2.0"
name = "ds"
repository = "https://github.com/rafaelrcamargo/ds"
version = "0.0.0"

[badges]
maintenance = { status = "experimental" }

[[bin]]
name = "ds"

[dependencies]
byte-unit = "5.1"
clap = "4.4"
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
terminal_size = "0.3"
anyhow = "1.0"
signal-hook = "0.3"
crossterm = "0.27"
