[package]
authors = ["Rafael R. Camargo"]
categories = ["command-line-utilities"]
description = "Visualize container stats with beautiful, real-time charts directly in your terminal."
documentation = "https://docs.rs/docker-stats"
edition = "2021"
keywords = ["docker", "container", "stats", "monitoring", "terminal"]
license = "Apache-2.0"
name = "docker-stats"
readme = "README.md"
repository = "https://github.com/rafaelrcamargo/ds"
version = "0.2.0"

[badges]
maintenance = { status = "experimental" }

[[bin]]
name = "ds"
path = "src/main.rs"

[lib]
name = "docker_stats"

[dependencies]
byte-unit = "5.1"
clap = "4.4"
colored = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
terminal_size = "0.4"
anyhow = "1.0"
signal-hook = "0.3"
crossterm = "0.29"
